# 51.isnap.world

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/scripts/: Dockerfile  requirements.txt  volcengine_aesthetic_server.py
backend/src/: domain.rs  infrastructure.rs  main.rs
backend/src/application/: dto.rs  use_cases.rs
backend/src/application/use_cases/: battle_photo.rs  delete_photo.rs  get_leaderboard.rs  get_random_unsplash.rs  list_photos.rs  score_photo.rs  upload_photo.rs
backend/src/domain/: battle.rs  errors.rs  file.rs  photo.rs  repository.rs  review.rs  score.rs  scoring.rs
backend/src/infrastructure/: geoip.rs  http.rs  storage.rs
backend/src/infrastructure/db/: sqlite.rs
backend/src/infrastructure/http/: artimuse_client.rs  gemini_client.rs  gemini_mentor.rs  gemini_reviewer.rs  unsplash_client.rs  volcengine_client.rs
backend/src/infrastructure/storage/: local_file_storage.rs
backend/src/presentation/: error.rs  routes.rs
backend/src/presentation/routes/: battle.rs  donate.rs  health.rs  leaderboard.rs  locale.rs  me.rs  mentor.rs  photos.rs  unsplash.rs  webhook.rs
deploy/: .env.example  docker-start.sh  docker-stop.sh  download-models.sh  nginx.conf  photo-backend.service  setup.sh  volcengine.service
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  (+1 more)
logs/: app.log.2026-05-09  error.log.2026-05-09
(+24 files in other folders)
