[package]
name = "photo-battle-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
async-trait = "0.1"
dotenvy = "0.15"
